--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 <frameset rows="160,*">
     <frame src="frame.html" name="topFrame" />
     <frameset cols="50%,50%">
-        <frame src="frame.html" name="leftFrame" />
-        <frame src="frame.html" name="rightFrame" />
+        <frame src="frame1.html" name="leftFrame" />
+        <frame src="frame2.html" name="rightFrame" />
     </frameset>
 </frameset>
 <body>
