--- a/index.html
+++ b/index.html
@@ -6,11 +6,8 @@
     <script type="text/javascript" defer src="LoadFrame.js"></script>
 </head>
 <frameset rows="160,*">
-    <frame src="frame.html" name="topFrame" />
-    <frameset cols="50%,50%">
-        <frame src="frame1.html" name="leftFrame" />
-        <frame src="frame2.html" name="rightFrame" />
-    </frameset>
+    <frame src="frame1.html" name="topFrame" />
+    <frame src="frame2.html" name="bottomFrame" />
 </frameset>
 <body>
 </body>
