--- a/iframeExample.htm
+++ b/iframeExample.htm
@@ -2,7 +2,6 @@
 <!DOCTYPE html><html>
 
 <head>
-<script src="1html.js">
 <!--// 
 //--></script><title>MY FILE</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.00">
@@ -19,8 +18,8 @@
 
 <h1>Example Contents</h1>
 
-<p><a href="anchors.htm" target="iframe2">What's in a name - Anchors</a><br>
-<a href="FormSelect.htm" target="iframe2">Menus in Forms</a><br>
+<p><a href="anchors.htm" target="bottomFrame">What's in a name - Anchors</a><br>
+<a href="FormSelect.htm" target="bottomFrame">Menus in Forms</a><br>
 <a href="../JavaScript/freeEditor.htm" target="iframe2">free java script editor to help create code.</a><br>
 </p>
 
